feat: add logout button

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@ html {
 }
 
 #nprogress .bar {
-  @apply h-[3px] bg-teal-500;
+  @apply h-[3px] bg-violet-500;
   box-shadow: 0 0 8px theme('colors.transparent'),
     0 0 5px theme('colors.transparent');
 }
