--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-gray-200 text-gray-500;
+html,
+body,
+#__next {
+  @apply h-full bg-gray-200 text-gray-500;
 }
 
 html {
