--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 html,
 body,
 #__next {
-  @apply h-full w-full bg-gray-200 text-gray-500;
+  @apply h-full w-full text-gray-600;
   -webkit-tap-highlight-color: transparent;
 }
 
