fix: progress height

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ body,
 }
 
 #nprogress .bar {
-  @apply h-1 bg-yellow-500;
+  @apply h-[3px] bg-yellow-500;
   box-shadow: 0 0 8px theme('colors.transparent'),
     0 0 5px theme('colors.transparent');
 }
