perf: optmize orders tooltips render

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,7 @@ body,
     @apply scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
   }
 }
+
+::selection {
+  @apply bg-yellow-500 text-stone-50;
+}
