feat: pwa basic support

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,15 @@
 html,
 body,
 #__next {
-  @apply h-full w-full text-stone-600 scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
+  @apply h-full w-full select-none text-stone-600 scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
   -webkit-tap-highlight-color: transparent;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #nprogress .bar {
@@ -20,7 +27,7 @@ body,
 
 @layer components {
   .ms-scroll {
-    @apply scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
+    @apply overscroll-y-contain scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
   }
 }
 
