feat: fix chrome scroll update, optimize database indexes and improve query performance across multiple models

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,6 +42,6 @@ body {
 
 @layer components {
   .ms-scroll {
-    @apply overscroll-y-contain scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
+    @apply scrollbar-thin scrollbar-thumb-stone-200 scrollbar-thumb-rounded-md;
   }
 }
